# django-utils

./: .gitlab-ci.yml  .pre-commit-config.yaml  flake.nix  pyproject.toml
django_utils/: env.py  middleware.py  wsgi.py
django_utils/auth/: backend.py  pipeline.py  utils.py
django_utils/celery/: app.py
django_utils/drf/: permissions.py  serializers.py  views.py
django_utils/settings/: auth.py  caches.py  celery.py  common.py  databases.py  debug.py  drf.py  logging.py
django_utils/storage/: apps.py  backends.py
django_utils/urls/: default.py  drf.py
releasenotes/notes/: add-auth-backend-53a70243605c0614.yaml  add-env-9de8f9148125a30e.yaml  add-middleware-probes-x-real-ip-547684c2a321d5d2.yaml  allowed-cidr-4760ad8347aa58cf.yaml  auth-backend-stop-sync-name-241701bb4f859b8a.yaml  auth-backend-sync-user-groups-e11cc48dd3fe2bf6.yaml  auth-backend-sync-user-roles-8726a1c02803a203.yaml  auth-utils-get-auth-token-bb2a99a29a317ee4.yaml  celery-redis-drf-required-d014b0f7c52602f7.yaml  django_utils_storage_task_clear_files-ffa4e2c96d1c74ee.yaml  drf-model-with-view-permissions-068d6e957398cbe8.yaml  fix-sync-name-b472e593c9623b68.yaml  fix_ci-a39157c018319f13.yaml  fix_role_defaults-d5e706c8c80702a0.yaml  init-all-0285bc9a13a3b158.yaml  initial-release-665781009d9596be.yaml  mozilla-django-oidc-v1.0.0-21c96174c40b13fa.yaml  post-office-713075feff4d88b8.yaml  pprof-v1.0.0-cbaef0c9eb7aad0b.yaml  pypprof-7a91f1a1087d1a59.yaml  remove-old-auth-1a2e7b143d9702ed.yaml  renovate-07eb36e1a4753049.yaml  renovate-16e1a0c816ea2696.yaml  renovate-24a45fe9687fb4b7.yaml  renovate-a4d26aaa6356ad2b.yaml  renovate-e483147fb7fe373e  renovate-fa38875d27c14192.yaml  secure-redirect-exempt-45c5e0c89317e8a8.yaml  settings-auth-generic-env-variables-29eb82cd03e1b933.yaml  settings-drf-fix-throttle-0878bee8343227ea.yaml  settings-logging-fix-parso-ab72408cb41f3a6c.yaml  settings-logging-less-aggressive-18793d0ae0d0f44b.yaml  storage-backend-0dbcc3a320dc8176.yaml  update_CI-e5ade4a1e3c8a1e2.yaml  urls-drf-add-apps-with-api-4d2987faef6c8edf.yaml  urls-drf-apps-with-api-change-path-d620b89dfdb5cd97.yaml  urls-drf-apps-with-api-fix-module-db29512458250629.yaml
