# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2022 Association Prologin <association@prologin.org>
# Copyright (c) 2022 Marc 'risson' Schmitt <marc.schmitt@prologin.org>

[tool.poetry]
name = "prologin-django-utils"
version = "0.3.0"
description = "Utils for Prologin's Django applications"
authors = ["Association Prologin <association@prologin.org>", "Marc 'risson' Schmitt <marc.schmitt@prologin.org>"]
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/prologin/tech/packages/django-utils.git"
packages = [
  { include = "django_utils" },
]

[[tool.poetry.source]]
name = "gitlab-prologin"
url = "https://gitlab.com/api/v4/groups/prologin/-/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24"
celery = { version = "^5.2" }
collectfast = "*"
django = "^4.0"
django-celery-beat = { version = "^2.4"}
django-debug-toolbar = "*"
django-mail-panel = "^4.0"
django-prometheus = "^2.2"
django-pypprof = { version = "1.0.0", optional = true }
django-redis = { version = "^5" }
django-rest-knox = { version = "^4.2" }
django-storages = "^1.12"
django-structlog = { version = "^4.0", extras = [ "celery" ] }
djangorestframework = { version = "^3.13" }
drf-spectacular = { version = "*", extras = [ "offline" ] }
mozilla-django-oidc = { version = "^3.0", optional = true }

[tool.poetry.extras]
auth = ["mozilla-django-oidc"]
pprof = ["django-pypprof"]

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"
prospector = {extras = ["with_everything"], version = "*"}
renogin = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
